fix(wrapper): overflow was expanding site which = fail. fixed.

--- a/components/SiteSidebar/_sidebar.scss
+++ b/components/SiteSidebar/_sidebar.scss
@@ -16,6 +16,9 @@
       padding:40px;
       margin-top:15px;
     }
+    &:after {
+      display:none;
+    }
   }
 }
 
