--- a/static/css/app.scss
+++ b/static/css/app.scss
@@ -1,5 +1,9 @@
 @import 'core/core';
 
+.wrapper {
+  overflow:hidden;
+}
+
 header {
   
   position:absolute;
